tests/toylang/neg/001071_mutation.toylang
program a = { if a then sleep 0 else sleep; } .
